fix h3 on about page with off center issue by adding a text-align: center to the h3 property in leftTeamContainer

--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -123,15 +123,14 @@ ul.social {
   font-weight: 400;
   font-size: 1.8rem;
   line-height: 2.5rem;
-  
 }
 
 textarea {
   resize: none;
 }
 .leftTeamContainer h3{
-font-size: 1.8rem;
-
+  font-size: 1.8rem;
+  text-align: center;
 }
 
 h3.name{
